--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - "8501:8501"
     depends_on:
       - backend
+    volumes:
+      - ./data:/app/data
     command: streamlit run frontend/ui.py --server.address=0.0.0.0
     environment:
       - STREAMLIT_SERVER_PORT=8501
